18/billing/initdb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
