18/billing/php_deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-billing-php-deployment
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-billing-php
  template:
    metadata:
      labels:
        app: app-billing-php
    spec:
      volumes:
      - name: app-billing-code
        persistentVolumeClaim:
          claimName: app-billing-code
      containers:
      - name: php
        image: amarrak/sitebilling:v1.2
        volumeMounts:
          - name: app-billing-code
            mountPath: /code
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp -r /myapp/. /code"]

#        initContainers:
#        - name: install
#          image: busybox
#          volumeMounts:
#          - name: code
#            mountPath: /code
#          command:
#          - wget
#          - "-O"
#          - "/code/index.php"
#          - https://raw.githubusercontent.com/amarrak/kube/master/index.php
