18/billing/nginx_service.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp

---
apiVersion: v1
kind: Service
metadata:
  name: app-billing-nginx-service
  namespace: myapp
spec:
  selector:
    app: app-billing-nginx
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 80
    name: web
  type: NodePort
