18/billing/php_service.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp

---
apiVersion: v1
kind: Service
metadata:
  name: app-billing-php-service
  namespace: myapp
spec:
  selector:
    app: app-billing-php
  ports:
  - protocol: TCP
    port: 9000
  type: NodePort
