18/billing/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: billing-ingress
  namespace: myapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /billing($|/)(.*)
            backend:
              serviceName: app-billing-nginx-service
              servicePort: 8000
